[package]
name = "memmapix"
version = "0.8.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Yevhenii Reizner <razrfalcon@gmail.com>",
    "Al Liu <scygliu1@gmail.com>",
    "The Contributors",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/al8n/memmapix-rs"
documentation = "https://docs.rs/memmapix"
description = "Cross-platform Rust API for memory-mapped file IO"
keywords = ["mmap", "memory-map", "io", "file"]
edition = "2021"
rust-version = "1.63.0"

[dependencies]
stable_deref_trait = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["mm", "param"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys = { version = "0.12", default-features = false, features = ["general", "no_std"] }

# rustix v1 does not expose the Darwin-specific `MADV_*` constants
# (`MADV_FREE`, `MADV_FREE_REUSABLE`, `MADV_FREE_REUSE`, `MADV_ZERO_WIRED_PAGES`),
# so on Apple targets we go through libc for `madvise` to preserve parity with
# the original libc-based implementation.
[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
owning_ref = "0.4"
